xml/src2/objects/Case.object
<CustomObject>
    <fields>
        <fullName>About__c</fullName>
        <label>About</label>
        <picklist>
            <picklistValues>
                <fullName>CVent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exact Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Bertha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Any additional comments about the resolution of this case</inlineHelpText>
        <label>Comments</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Cases on department wise</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Black College Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clergy Formation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clergy Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collegiate Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Interpretation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Loans and Scholarships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Data Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools Colleges and Universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Methodist Endorsing Agency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_to_update__c</fullName>
        <inlineHelpText>Give complete details of all the information to be added, changed, or deleted</inlineHelpText>
        <label>Information to update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Reason__c</fullName>
        <inlineHelpText>Required for pending cases – description of reason that case is pending</inlineHelpText>
        <label>Pending Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of staff person submitting information</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved_Date_Time__c</fullName>
        <label>Resolved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Create New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>Priority of the case</description>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>No Rush</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rush</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
</CustomObject>